fixed the alignment on h2

--- a/css/style.css
+++ b/css/style.css
@@ -44,4 +44,5 @@ p {
 /* Custom design below! */
 .options {
   margin: 10%;
+  text-align: center;
 }
